<resources>
    <string name="GENERAL_SEND">Send</string>
    <string name="GENERAL_DELETE">Delete</string>
    <string name="NOTIFICATION_REPORT_CREATED">New report created</string>
    <string name="NOTIFICATION_REPORT_INFO">Click to view the report</string>
    <string name="GENERAL_DATE">Date</string>
    <string name="REPORT_APP_VERSION_HEADER">App version</string>
    <string name="REPORT_COMMENT_HINT">Add your comment here</string>
    <string name="REPORT_DEVICE_INFO_HEADER">Device info</string>
    <string name="REPORT_ATTACHMENTS_HEADER">Attachments</string>
    <string name="ERROR_REPORT_NOT_FOUND">Report not found</string>
    <string name="SCREENSHOT_TITLE">Screenshot</string>
    <string name="LOGS_TITLE">Latest logs</string>
    <string name="REPORT_TITLE">Report #%1$d</string>
</resources>
