<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/GENERAL_DATE"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />

    <TextView
        android:id="@+id/report_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        tools:text="21.12.2018 12:48" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/REPORT_DEVICE_INFO_HEADER"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />

    <TextView
        android:id="@+id/report_device_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        tools:text="Nexus 5, API Level 24, density xxhdpi, screen 320x480dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/REPORT_ATTACHMENTS_HEADER"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <ImageButton
            android:id="@+id/report_screen_shot"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_photo" />

        <Space
            android:layout_width="4dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/report_logs"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_adb" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/report_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/REPORT_COMMENT_HINT" />

    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/report_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/GENERAL_SEND" />

</LinearLayout>